feat: implement car model dynamic property crud
