# src/api/api.go
@@ -70,7 +70,7 @@ func RegisterRoutes(r *gin.Engine, cfg *config.Config) {
 		carModelYears := v1.Group("/car-model-years", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
 		carModelPriceHistories := v1.Group("/car-model-price-histories", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
 		carModelImages := v1.Group("/car-model-images", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
-
+		carModelProperties := v1.Group("/car-model-properties", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
 		// Test
 		routers.Health(health)
 		routers.TestRouter(test_router)
@@ -98,6 +98,7 @@ func RegisterRoutes(r *gin.Engine, cfg *config.Config) {
 		routers.CarModelYear(carModelYears, cfg)
 		routers.CarModelPriceHistory(carModelPriceHistories, cfg)
 		routers.CarModelImage(carModelImages, cfg)
+		routers.CarModelProperty(carModelProperties, cfg)
 
 		r.Static("/static", "./uploads")
 	}
