# src/api/dto/car.go
@@ -43,14 +43,15 @@ type UpdateCarModelRequest struct {
 }
 
 type CarModelResponse struct {
-	Id             int                     `json:"id"`
-	Name           string                  `json:"name"`
-	CarType        CarTypeResponse         `json:"carType"`
-	Company        CompanyResponse         `json:"company"`
-	Gearbox        GearboxResponse         `json:"gearbox"`
-	CarModelColors []CarModelColorResponse `json:"carModelColors,omitempty"`
-	CarModelYears  []CarModelYearResponse  `json:"carModelYears,omitempty"`
-	CarModelImages []CarModelImageResponse `json:"carModelImages,omitempty"`
+	Id                 int                        `json:"id"`
+	Name               string                     `json:"name"`
+	CarType            CarTypeResponse            `json:"carType"`
+	Company            CompanyResponse            `json:"company"`
+	Gearbox            GearboxResponse            `json:"gearbox"`
+	CarModelColors     []CarModelColorResponse    `json:"carModelColors,omitempty"`
+	CarModelYears      []CarModelYearResponse     `json:"carModelYears,omitempty"`
+	CarModelImages     []CarModelImageResponse    `json:"carModelImages,omitempty"`
+	CarModelProperties []CarModelPropertyResponse `json:"carModelProperties,omitempty"`
 }
 
 type CreateCarModelColorRequest struct {
@@ -118,4 +119,21 @@ type CarModelImageResponse struct {
 	CarModelId  int          `json:"carModelId,omitempty"`
 	Image       FileResponse `json:"image,omitempty"`
 	IsMainImage bool         `json:"isMainImage"`
+}
+
+type CreateCarModelPropertyRequest struct {
+	CarModelId int    `json:"carModelId" binding:"required"`
+	PropertyId int    `json:"propertyId" binding:"required"`
+	Value      string `json:"value" binding:"required,max=100"`
+}
+
+type UpdateCarModelPropertyRequest struct {
+	Value string `json:"value" binding:"required,max=100"`
+}
+
+type CarModelPropertyResponse struct {
+	Id         int              `json:"id"`
+	CarModelId int              `json:"carModelId,omitempty"`
+	Property   PropertyResponse `json:"property,omitempty"`
+	Value      string           `json:"value"`
 }
